sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: value >- is not a member of Int
      while (rg>-1) {
               ^